Fix whitespace

--- a/styles/index.css
+++ b/styles/index.css
@@ -177,8 +177,10 @@ html {
 body {
   /* scroll-snap-type: y mandatory */
 }
-body > header, body > nav, body > main, body > aside, body > footer
-  {color: CanvasText;background: Canvas}
+body > header, body > nav, body > main, body > aside, body > footer {
+  color: CanvasText;
+  background: Canvas;
+}
 body > header {}
 body > nav {
   background: transparent;
